src/scss/style.scss
//import google fonts

@import url('https://fonts.googleapis.com/css2?family=Rubik&display=swap');


//golbal color variables 

$bg-color: #1D2D44;
$txt-color: #F0EBD8;
$btn-color: #0D1321;
$body_color: #3E5C76;



//reset basic code

body{
    margin: 0;
    padding: 0;
    box-sizing: border-box;
    background-color: $body-color;
    font-family: 'Rubik', sans-serif;
}

//mixin part

@mixin border-radius {
    border-radius: 5px;
}


@mixin button {
        margin: 5px 0px 5px 0px;

        background-color: $btn-color;
        color: $txt-color;

        border: 1px solid $btn-color;
        @include border-radius;

        text-transform: uppercase;
        font-weight: 700;
}

@mixin margin {
        margin: 25px 50px 25px 50px;
}

@mixin responsive-margin {
        margin: 25px 10px 25px 10px;
}


//end mixin




//navbar css code

.navbar{
    display: flex;
    justify-content: space-between;

    background-color: $bg-color;
    color: $txt-color;

    padding: 5px 50px 5px 50px;

    height: 50px;

    position: sticky;
    top: 0;

    h1{
        margin: 0px;
        line-height: 50px;
    }

    button{
        height: auto;

        @include button;
    }
}

@media screen and (max-width: 768px) {
    .navbar{
        padding: 5px 10px 5px 10px;
    }
}

// header css part

.header{
    background-size: cover;
    background-position: center center;

    color: $txt-color;

    height: 30vh;

    @include margin;

    padding-left: 15px;

    text-align: left;

    @include border-radius;

    display: flex;
    justify-content: start;
    align-items: center;

    h2{
        font-size: 2em;
        font-weight: 400;
        margin: 5px 0px 5px 0px;
        text-transform: uppercase;
    }

    .header__btn{
        margin-top: 10px;

        button{
            @include button;
            padding: 5px;
            height: 35px;
        }

        button:nth-child(1){
            background-color: $txt-color;
            color: $btn-color;

            margin-right: 10px;

            width: 95px;

            border: 0px;
        }
    }
    
}


@media screen and (max-width: 768px) {
    .header{
        @include responsive-margin;
    }
}

//bar css part

.bar{
    @include margin;

    h3{
        color: $txt-color;

        margin-bottom: 5px;
    }

    hr{
        color: $bg-color;
        
        border: 2px solid $bg-color;      
        
        margin-top: 0;
    }
}

@media screen and (max-width: 768px) {
    .bar{
        @include responsive-margin;
    }
}


// main box cs part

.main__box{
    display: flex;
}

.movie{

    img{
        width: 300px;
        height: auto;
    }
}

